Fixed portal align

--- a/src/components/common/Portal/style.scss
+++ b/src/components/common/Portal/style.scss
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background: rgba($color--white-pink, 0.90);
   backdrop-filter: blur(1px);
